Project

General

Profile

Bug #26970

src/osd/OSDMap.h: 1065: FAILED assert(__null != pool)

Added by David Zafman over 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/dzafman-2018-08-16_17:35:08-rados:thrash-wip-zafman-testing4-distro-basic-smithi/2911898

2018-08-17T11:28:15.644 INFO:tasks.ceph.osd.7.smithi025.stderr:/build/ceph-14.0.0-2291-geba89c7/src/osd/OSDMap.h: In function 'int OSDMap::get_pg_num(int) const' thread 7f8f70c70700 time 2018-08-17 11:28:15.645769
2018-08-17T11:28:15.644 INFO:tasks.ceph.osd.7.smithi025.stderr:/build/ceph-14.0.0-2291-geba89c7/src/osd/OSDMap.h: 1065: FAILED assert(_null != pool)
2018-08-17T11:28:15.644 INFO:tasks.ceph.osd.7.smithi025.stderr: ceph version 14.0.0-2291-geba89c7 (eba89c7f0a33f5574c7927ffbc55d4ba06132b34) nautilus (dev)
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 1: (ceph::
_ceph_assert_fail(char const*, char const*, int, char const*)+0x152) [0x56145be14de9]
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x56145be14f6b]
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 3: (OSD::project_pg_history(spg_t, pg_history_t&, unsigned int, std::vector<int, std::allocator<int> > const&, int, std::vector<int, std::allocator<int> > const&, int)+0x299) [0x56145bf2fed9]
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 4: (OSD::handle_pg_query_nopg(MQuery const&)+0x225) [0x56145bf30c35]
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 5: (OSD::dequeue_peering_evt(OSDShard*, PG*, std::shared_ptr<PGPeeringEvent>, ThreadPool::TPHandle&)+0x20a) [0x56145bf3250a]
2018-08-17T11:28:15.645 INFO:tasks.ceph.osd.7.smithi025.stderr: 6: (PGPeeringItem::run(OSD*, OSDShard*, boost::intrusive_ptr<PG>&, ThreadPool::TPHandle&)+0x50) [0x56145c1a5190]
2018-08-17T11:28:15.646 INFO:tasks.ceph.osd.7.smithi025.stderr: 7: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0x1c52) [0x56145bf4dd22]
2018-08-17T11:28:15.646 INFO:tasks.ceph.osd.7.smithi025.stderr: 8: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x466) [0x56145c4e24f6]
2018-08-17T11:28:15.646 INFO:tasks.ceph.osd.7.smithi025.stderr: 9: (ShardedThreadPool::WorkThreadSharded::entry()+0x10) [0x56145c4e48c0]
2018-08-17T11:28:15.646 INFO:tasks.ceph.osd.7.smithi025.stderr: 10: (()+0x76db) [0x7f8f9af9f6db]
2018-08-17T11:28:15.646 INFO:tasks.ceph.osd.7.smithi025.stderr: 11: (clone()+0x3f) [0x7f8f99b3688f]


Related issues

Copied to RADOS - Backport #38450: mimic: src/osd/OSDMap.h: 1065: FAILED assert(__null != pool) Resolved

History

#1 Updated by Sage Weil over 5 years ago

  • Status changed from New to Resolved

#2 Updated by David Zafman about 5 years ago

This was fixed as cfe6ca82ed800e81e286396b5b7783ca299325f0 in larger pull request https://github.com/ceph/ceph/pull/20469

#3 Updated by Neha Ojha about 5 years ago

Seen in mimic: /a/yuriw-2019-02-20_20:24:46-rados-wip-yuri3-testing-2019-02-20-1755-mimic-distro-basic-smithi/3619026/

2019-02-21T04:01:25.574 INFO:tasks.ceph.osd.1.smithi146.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/13.2.4-400-ge1b6d06/rpm/el7/BUILD/ceph-13.2.4-400-ge1b6d06/src/osd/OSDMap.h: In function 'int OSDMap::get_pg_num(int) const' thread 7fbf663ad700 time 2019-02-21 04:01:25.582536
2019-02-21T04:01:25.575 INFO:tasks.ceph.osd.1.smithi146.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/13.2.4-400-ge1b6d06/rpm/el7/BUILD/ceph-13.2.4-400-ge1b6d06/src/osd/OSDMap.h: 1069: FAILED assert(__null != pool)
2019-02-21T04:01:25.575 INFO:tasks.ceph.osd.1.smithi146.stderr: ceph version 13.2.4-400-ge1b6d06 (e1b6d06aac57fec2dcb0e8ac186975bc31267e07) mimic (stable)
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0xff) [0x7fbf91f17d5f]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 2: (()+0x25af27) [0x7fbf91f17f27]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 3: (OSD::project_pg_history(spg_t, pg_history_t&, unsigned int, std::vector<int, std::allocator<int> > const&, int, std::vector<int, std::allocator<int> > const&, int)+0x2a1) [0x555df9bca0c1]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 4: (OSD::handle_pg_query_nopg(MQuery const&)+0x225) [0x555df9bcae15]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 5: (OSD::dequeue_peering_evt(OSDShard*, PG*, std::shared_ptr<PGPeeringEvent>, ThreadPool::TPHandle&)+0x20a) [0x555df9bcc6fa]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 6: (PGPeeringItem::run(OSD*, OSDShard*, boost::intrusive_ptr<PG>&, ThreadPool::TPHandle&)+0x50) [0x555df9e363f0]
2019-02-21T04:01:25.576 INFO:tasks.ceph.osd.1.smithi146.stderr: 7: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0x1bbd) [0x555df9bddebd]
2019-02-21T04:01:25.577 INFO:tasks.ceph.osd.1.smithi146.stderr: 8: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x3d3) [0x7fbf91f1dab3]
2019-02-21T04:01:25.577 INFO:tasks.ceph.osd.1.smithi146.stderr: 9: (ShardedThreadPool::WorkThreadSharded::entry()+0x10) [0x7fbf91f1e6a0]
2019-02-21T04:01:25.577 INFO:tasks.ceph.osd.1.smithi146.stderr: 10: (()+0x7dd5) [0x7fbf8ea99dd5]
2019-02-21T04:01:25.577 INFO:tasks.ceph.osd.1.smithi146.stderr: 11: (clone()+0x6d) [0x7fbf8db89ead]

#4 Updated by Neha Ojha about 5 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to mimic

#5 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38450: mimic: src/osd/OSDMap.h: 1065: FAILED assert(__null != pool) added

#6 Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved".

Also available in: Atom PDF