src/osd/OSD.h
@@ -1878,6 +1878,7 @@ protected:
   /// project pg history from from to now
   bool project_pg_history(
     spg_t pgid, pg_history_t& h, epoch_t from,
+    const OSDMapRef& endmap,
     const vector<int>& lastup,
     int lastupprimary,
     const vector<int>& lastacting,
